static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&family=Gowun+Batang:wght@400;700&display=swap');

:root {
  --nav_green: #009a3b;
  --nav_hover: rgb(90, 139, 89);
  --session_green: rgba(216, 227, 152, .4);
  --btn-success: #22ac46;
  --bg-colour: #f8f9fa;
}

/* General Styles */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

section {
  padding: 0 0 20px ;
}

.btn-success {
  background-color: var(--btn-success);
  border: none;
}

/* Google fonts */
.gowun-batang-regular {
  font-family: "Gowun Batang", serif;
  font-weight: 400;
  font-style: normal;
}

body {
  background-color: #fff;
  font-size: 1rem;
  line-height: 1.5;
  font-family: SourceSansRegular, Arial, Verdana, Geneva, Tahoma, sans-serif;
  color: #607D8B;
}

.main-container {
  max-width: 1320px;
  margin: auto;
  padding: 0 15px;
}

header .btn-success {
  border-radius: 0px;
}

video {
  max-width: 100%;
  height: auto;
}

/* Navbar  */
.navbar {
  border-top: 8px solid var(--nav_green);
}

.navbar-brand,
.nav-link,
.nav-link:hover {
  color: var(--nav_green);
}

.navbar-brand img {
  max-height: 55px;
  height: auto;
  /* Maintain aspect ratio */
  width: auto;
  /* Optional to prevent width distortion */
}

.navbar-nav .nav-link.active {
  color: rgb(37 129 70);
  font-weight: 600;
}

.navbar-brand:hover {
  color: var(--nav_hover);
}

.nav-link:hover {
  color: var(--nav_hover);
}

/* Hero Container */
.hero-container {
  position: relative;
  height: calc(100vh - 90px);
  overflow: hidden;
}

/* Hero */
.hero {
  position: absolute;
  width: 100vw;
  height: 100vh;
}

/* Hero Image */
.hero img {
  position: absolute;
  width: 100%;
  height: 100vh;
  object-fit: cover;
  box-shadow: 0px 5px 11px 0px rgba(180, 181, 179, 0.73);
}

.hero-heading {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 2.5rem;
  font-family: serif;
  color: white;
  background-color: #76594261;
  border-radius: 10px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
  padding: 1.2rem;
}

.img-design {
  background-color: rgba(255, 255, 255, 0.9);
  box-shadow: 4px 5px 20px 4px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
  max-width: 600px;
}


.cooking-demo {
  color: var(--nav_green);
  text-decoration: none;
}

h1,
h2,
h3 {
  color: var(--nav_green);
  margin: 1.5rem 0;
}

.d-flex {
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.buy_thermomix {
  position: relative;
}

/* position the btns in the center of the image */
.buy_thermomix-img {
  position: relative;
}

.buy_thermomix img {
  object-fit: cover;
  width: 100%;
  overflow: hidden;
  max-height: 600px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
  border-radius: 5px;
}

.buy_thermomix-btn {
  position: absolute;
  display: inline-flex;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* Footer */
footer {
  background-color: var(--nav_green);
  color: white;
  padding: 20px;
  font-size: 0.9rem;
  color: #fff;
}

footer a {
  color: #fff;
  text-decoration: none;
  margin: 0 10px;
}

footer a:hover {
  text-decoration: underline;
}

.img-fluid {
  max-width: 100%;
  height: auto;
}

.container {
  max-width: 100%;
  margin: 0 auto;
  padding: 2%;
}

.container,
.row,
.col {
  max-width: 100%;
  margin: 0 auto;
}

/* Book Demo CSS */
.card-title {
  color: var(--nav_green);
}

.card-body {
  color: #607D8B;
}

.card-top {

  bottom: 15vh;
  border-radius: 50px 50px 5px 5px;
  text-wrap: balance;
  border: 0;
  background: var(--bg-colour);
  box-shadow: 0px 0px 1px 2px rgba(20, 20, 20, -0.8);
}

.form-control::placeholder {
  opacity: .6;
}

.how_it_works {
  margin-top: -7rem;
}


/* Section buy_thermomix */
.after-sale-suport {
  background-color: var(--bg-colour);
}

.bg-colour {
  background-color: var(--bg-colour);
  margin-bottom: 2rem;
}

/* key frame Animation */
.js-scroll {
  opacity: 0;
  transform: translateY(30px);
  transition: opacity 0.6s ease-out, transform 0.6s ease-out; /* Smooth fade and slide */
}

.scrolled {
  opacity: 1;
  transform: translateY(0);    /* Reset position */
}

.scrolled.slide-left {
  animation: slide-in-left 1s ease-in-out both;
}

.scrolled.slide-right {
  animation: slide-in-right 1s ease-in-out both;
}

@keyframes slide-in-left {
  0% {
    -webkit-transform: translate(-100px);
    transform: translate(-100px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translate(0);
    transform: translate(0);
    opacity: 1;
  }
}

@keyframes slide-in-right {
  0% {
    -webkit-transform: translate(100px);
    transform: translate(100px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translate(0);
    transform: translate(0);
    opacity: 1;
  }
}

/* Media Queries */
@media (max-width: 768px) {
  .contact {
    margin-bottom: -120px ;
  }
  .card-body {
    margin-top: -15px;
  }
}

@media (max-width: 576px) {
  #thermomixButtons {
    display: none;
  }
 }

